--- a/shots.html
+++ b/shots.html
@@ -6,8 +6,124 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shots</title>
     <link rel="icon" type="image/png" href="picsfolder/favicon.png">
-    <link rel="stylesheet" href="icons.css">
-    <link rel="stylesheet" href="text.css">
+<style>
+    @font-face {
+    font-family: ScoutB;
+    src: url(fonts/scout-font/Scout-Bold.ttf);
+    }
+@font-face {
+    font-family: ScoutR;
+    src: url(fonts/scout-font/Scout-Regular.ttf);
+    }
+@font-face {
+      font-family: Graphik;
+      src: url(fonts/Graphik-Regular.ttf);
+      }
+@font-face {
+      font-family: Neue Machina;
+      src: url(fonts/Neue-Machina/NeueMachina-Light.otf);
+        }
+
+p {
+      font-family: "Graphik";
+      font-size: 15px;
+      font-weight: 400;
+      color: red;
+      min-width: 200px;
+      text-align: center
+    }
+h1 {
+      font-family: "Graphik";
+      font-size: 40px;
+      font-weight: 400;
+      color: red;
+      min-width: 200px;
+      text-align: center
+    }
+a {
+      font-family: "Graphik";
+      font-size: 15px;
+      font-weight: 400;
+      color: red;
+      min-width: 200px;
+      text-align: center;
+    }
+b {
+      font-family: "Graphik";
+      font-size: 20px;
+      font-weight: 300;
+      color: red;
+      min-width: 200px;
+      text-align: center
+    }
+h2 {
+      font-family: "Graphik";
+      font-size: 20px;
+      font-weight: 400;
+      color: red;
+      min-width: 200px;
+      text-align: center
+    }
+h3 {
+      font-family: "Graphik";
+      font-size: 15px;
+      font-weight: 400;
+      color: rgb(45, 153, 90);
+      min-width: 200px;
+      text-align: center
+    }
+body {
+      background-color: white;
+      padding-right: 450px;
+      padding-left: 450px;
+    }
+marquee {
+      font-family: "Neue Machina";
+      color: red;
+      text-align: center;
+      padding-left: 20px;
+      font-size: 30px;
+    }
+/*** Works on common browsers ***/
+::selection {
+  background-color: #352e7e;
+  color: #fff;
+}
+
+/*** Mozilla based browsers ***/
+::-moz-selection {
+  background-color: #352e7e;
+  color: #fff;
+}
+
+/***For Other Browsers ***/
+::-o-selection {
+  background-color: #352e7e;
+  color: #fff;
+}
+
+::-ms-selection {
+  background-color: #352e7e;
+  color: #fff;
+}
+
+/*** For Webkit ***/
+::-webkit-selection {
+  background-color: #352e7e;
+  color: #fff;
+}
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+.cover {
+  object-fit: cover;
+  width: 50px;
+  height: 100px;
+}
+</style>
     <link rel="stylesheet" href="footer.php">
     <style>
         img {
