--- a/index.html
+++ b/index.html
@@ -16,19 +16,34 @@
     <!-- <link rel="stylesheet" href="style.css"> --> 
 </head>
 <body>
+  <!-- 
     <svg height="350" width="100%" background="black">
       <circle cx="50%" cy="170" r="150" fill="black" alpha="50%"></circle>
       </svg>
+    -->
     <h1>Rishi Gurjar</h1> 
-<h2 class="p1">Bay Area, California</h2>
-<h2><span id="datetime"></span></h2><script>var dt = new Date();
-  document.getElementById("datetime").innerHTML=dt.toLocaleString();</script>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+<h2>SF Bay Area, California</h2>
+<h2>rishigurjar2000@gmail.com</h2>
 <div>
-<p>Working on environmental conservation, climate literacy, and analyzing human-induced environmental disturbance. I occasionally take <a href="shots.html">photos</a>.
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+<p>Innovating environmental conservation, pushing for climate literacy, and analyzing anthropogenic environmental disturbance. I also take <a href="shots.html">photos</a>.
 </p>
+<!--
         <h2><a href="https://www.linkedin.com/in/rishi-gurjar-24a5b01b0/">Linkedin</a> / <a href="https://beyondterra.org/">Beyond Terra</a> / <a href="        https://www.sierraclub.org/san-francisco-bay/climate-literacy#:~:text=The%20goal%20of%20the%20SF,challenges%20of%20a%20destabilizing%20climate">Sierra Club</a></h2>
-<!-- <p>I occasionally take <a href="photodirectory.html">photos</a>.</p> -->
-<p>Email: <a href="mailto:rishigurjar2000@gmail.com">rishigurjar2000@gmail.com</a></p>
+ -->
+
+        <!-- <p>I occasionally take <a href="photodirectory.html">photos</a>.</p> -->
 </div>
 </body>
 
