--- a/index.html
+++ b/index.html
@@ -8,17 +8,19 @@
     
     <title>Rishi Gurjar</title>
     <link rel="icon" type="image/png" href="picsfolder/favicon.png">
+    <link rel="stylesheet" href="icons.css">
     <link rel="stylesheet" href="text.css">
+    <link rel="stylesheet" href="footer.php">
     <style>
     </style>
     <!-- <link rel="stylesheet" href="style.css"> --> 
 </head>
 <body>
-  <!--
+  <!-- 
     <svg height="350" width="100%" background="black">
       <circle cx="50%" cy="170" r="150" fill="black" alpha="50%"></circle>
-      </svg>-->
-    
+      </svg>
+    -->
     <h1>Rishi Gurjar</h1> 
     <br>
     <br>
@@ -26,8 +28,8 @@
     <br>
     <br>
     <br>
-<h2> SF Bay Area, California</h2>
-<h2>'rishigurjar2000' [at] 'gmail' [dot] 'com'</h2>
+<h2>SF Bay Area, California</h2>
+<h2>rishigurjar2000@gmail.com</h2>
 <div>
   <br>
   <br>
@@ -35,7 +37,7 @@
   <br>
   <br>
   <br>
-<p>Working on environmental conservation, climate literacy, and researching anthropogenic disturbance. I also take <a href="shots.html">photos</a>.
+<p>Innovating environmental conservation, pushing for climate literacy, and analyzing anthropogenic environmental disturbance. I also take <a href="shots.html">photos</a>.
 </p>
 <!--
         <h2><a href="https://www.linkedin.com/in/rishi-gurjar-24a5b01b0/">Linkedin</a> / <a href="https://beyondterra.org/">Beyond Terra</a> / <a href="        https://www.sierraclub.org/san-francisco-bay/climate-literacy#:~:text=The%20goal%20of%20the%20SF,challenges%20of%20a%20destabilizing%20climate">Sierra Club</a></h2>
