--- a/shots.html
+++ b/shots.html
@@ -150,6 +150,9 @@ marquee {
   <img src="images/large/IMG_1024.jpg" alt="">
   <p>London, GBR; 2017</p>
   <br>
+  <img src="images/large/28C1F2D5-F927-468B-BCD1-0305370016A4_1_105_c.jpeg" alt="">
+  <p>Battleboro, NC; 2018</p>
+  <br>
   <img src="images/large/DSC_1165.jpg" alt="">
   <p>Madrid, ESP; 2019</p>
   <br>
@@ -167,6 +170,7 @@ marquee {
   <img src="images/large/DSCF0707.jpg" alt="">
   <p>New York, NY; 2022</p>
 </body>
+
 <br>
 <p>Most photos taken on Fujifilm X-T4</p>
 
