--- a/shots.html
+++ b/shots.html
@@ -147,9 +147,6 @@ marquee {
 </head>
 <body>
   <h1>Selected photos:</h1>
-  <img src="images/large/IMG_1024.jpg" alt="">
-  <p>London, GBR; 2017</p>
-  <br>
   <img src="images/large/28C1F2D5-F927-468B-BCD1-0305370016A4_1_105_c.jpeg" alt="">
   <p>Battleboro, NC; 2018</p>
   <br>
@@ -166,6 +163,9 @@ marquee {
   <br>
   <img src="images/large/DSCF0250.jpg" alt="">
   <p>Port Angeles, WA; 2021</p>
+  <br>
+  <img src="images/large/898B5DA5-BCEB-4316-81C8-04E66BD301E5.jpg" alt="">
+  <p>Yosemite, CA; 2021</p>
   <br>
   <img src="images/large/DSCF0707.jpg" alt="">
   <p>New York, NY; 2022</p>
