--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <br>
   <br>
   <br>
-<p>Working on environmental conservation, climate literacy, and researching anthropogenic disturbance. I also take <a href="shots.html">photos</a>. Here's my  <a href="https://www.linkedin.com/in/rishi-gurjar-24a5b01b0/">background</a>.
+<p>Working on environmental conservation, climate literacy, and researching anthropogenic disturbance. I also take <a href="shots.html">photos</a>. Here's my  <a href="https://www.linkedin.com/in/rishi-gurjar-24a5b01b0/">background</a> and extra <a href="https://unsplash.com/@rishigurjar">shots</a>.
 </p>
 
 
