sf and seattle pics

--- a/shots.html
+++ b/shots.html
@@ -161,6 +161,12 @@ marquee {
   <img src="images/large/DSCF0566.jpg" alt="">
   <p>San Francisco, CA; 2021</p>
   <br>
+  <img src="images/large/DSCF0592.jpg" alt="">
+  <p>San Francisco, CA; 2021</p>
+  <br>
+  <img src="images/large/DSCF0340-2.jpg" alt="">
+  <p>Olympic Peninsula, WA; 2021</p>
+  <br>
   <img src="images/large/DSCF0250.jpg" alt="">
   <p>Port Angeles, WA; 2021</p>
   <br>
@@ -170,6 +176,9 @@ marquee {
   <img src="images/large/DSCF0707.jpg" alt="">
   <p>New York, NY; 2022</p>
 </body>
+
+
+
 
 <br>
 <p>Most photos taken on Fujifilm X-T4</p>
