--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       </svg>
     -->
       </svg>
-    
+
     <h1>Rishi Gurjar</h1> 
     <br>
     <br>
@@ -26,7 +26,9 @@
   <br>
   <br>
   <br>
-  <br>
+
+  <img src="images/DALL·E 2023-02-21 11.47.22 - a tile mosaic depiction of the switzerland alps and ocean.png" max-width = "100%" width="700" height = "auto">
+
 <p>Working on environmental conservation, climate literacy, and researching anthropogenic disturbance. I also take <a href="shots.html">photos</a>. Here's my  <a href="https://www.linkedin.com/in/rishigurjar/">background</a> and extra <a href="https://unsplash.com/@rishigurjar">shots</a>.
 </p>
 
