--- a/index.html
+++ b/index.html
@@ -17,19 +17,15 @@
     <br>
     <br>
     <br>
-    <br>
-    <br>
 <h2> SF Bay Area, California</h2>
-<h2>'rishigurjar2000' [at] 'gmail' [dot] 'com'</h2>
+<h2>Email: 'rishigurjar2000' [at] 'gmail' [dot] 'com'</h2>
+<h2>Linkedin: <a href="https://www.linkedin.com/in/rishigurjar/">https://www.linkedin.com/in/rishigurjar/</a></h2>
 <div>
   <br>
   <br>
   <br>
-  <br>
 
-  <img src="images/DALL·E 2023-02-21 11.47.22 - a tile mosaic depiction of the switzerland alps and ocean.png" max-width = "100%" width="700" height = "auto">
+  <img src="images/DALL·E 2023-02-21 11.47.22 - a tile mosaic depiction of the switzerland alps and ocean.png" max-width = "100%" width="830" height = "auto">
 
-<p>Working on environmental conservation, climate literacy, and researching anthropogenic disturbance. I also take <a href="shots.html">photos</a>. Here's my  <a href="https://www.linkedin.com/in/rishigurjar/">background</a> and extra <a href="https://unsplash.com/@rishigurjar">shots</a>.
-</p>
-
-
+<p>Researcher in anthropogenic disturbance and fisheries. Working on environmental conservation on the side. I also take <a href="shots.html">photos</a></a>.
+<p>Here's my <a href="LATEST-resume.pdf">CV</a> and extra <a href="https://unsplash.com/@rishigurjar">shots</a>.</p>
