--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <br>
     <br>
 <h2> SF Bay Area, California</h2>
-<h2>Email: 'rishigurjar2000' [at] 'gmail' [dot] 'com'</h2>
+<h2>Email: 'rrg85' [at] 'cornell' [dot] 'edu'</h2>
 <h2>Linkedin: <a href="https://www.linkedin.com/in/rishigurjar/">https://www.linkedin.com/in/rishigurjar/</a></h2>
 <div>
   <br>
