--- a/index.html
+++ b/index.html
@@ -27,5 +27,5 @@
 
   <img src="images/DALL·E 2023-02-21 11.47.22 - a tile mosaic depiction of the switzerland alps and ocean.png" max-width = "100%" width="830" height = "auto">
 
-<p>Researcher in anthropogenic disturbance and fisheries. Working on environmental conservation on the side. I also take <a href="shots.html">photos</a></a>.
-<p>Here's my <a href="LATEST-resume.pdf">CV</a> and extra <a href="https://unsplash.com/@rishigurjar">shots</a>.</p>
+<p>Researching anthropogenic disturbance/working on environmental conservation. I also take <a href="shots.html">photos</a></a>.
+<p>Here are extra <a href="https://unsplash.com/@rishigurjar">shots</a>.</p>
