--- a/shots.html
+++ b/shots.html
@@ -154,6 +154,17 @@ row-gap: 10px;
         }
     </style>
 </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RSXKBQ1LNX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RSXKBQ1LNX');
+</script>
+
 <body>
   <h2><a href="index.html">Back</a></h2>
   <h1>Selected photos:</h1>
