--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     </style>
     <!-- <link rel="stylesheet" href="style.css"> --> 
 </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RSXKBQ1LNX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RSXKBQ1LNX');
+</script>
+
 <body>
   <!--
     <svg height="350" width="100%" background="black">
