--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <br>
     <br>
     <br>
-<h2> SF Bay Area, California</h2>
+<h2> SF Bay Area & Ithaca, NY</h2>
 <h2>Email: 'rrg85' [at] 'cornell' [dot] 'edu'</h2>
 <h2>Linkedin: <a href="https://www.linkedin.com/in/rishigurjar/">https://www.linkedin.com/in/rishigurjar/</a></h2>
 <div>
@@ -38,5 +38,5 @@
 
   <img src="images/DALL·E 2023-02-21 11.47.22 - a tile mosaic depiction of the switzerland alps and ocean.png" max-width = "100%" width="830" height = "auto">
 
-<p>Researching anthropogenic disturbance/working on environmental conservation. I also take <a href="shots.html">photos</a></a>.
+<p>Researching anthropogenic disturbance and building other things. I also take <a href="shots.html">photos</a></a>.
 <p>Here are extra <a href="https://unsplash.com/@rishigurjar">shots</a>.</p>
