--- a/index.html
+++ b/index.html
@@ -17,11 +17,7 @@
 </script>
 
 <body>
-  <!--
-    <svg height="350" width="100%" background="black">
-      <circle cx="50%" cy="170" r="150" fill="black" alpha="50%"></circle>
-      </svg>
-    -->
+  <!--   hi    -->
       </svg>
 
     <h1>Rishi Gurjar</h1> 
@@ -29,14 +25,16 @@
     <br>
     <br>
 <h2> SF Bay Area & Ithaca, NY</h2>
-<h2>Email: 'rrg85' [at] 'cornell' [dot] 'edu'</h2>
+<h2>Email: x@y | x = rrg85, y = cornell.edu</h2>
+<br>
 <h2>Linkedin: <a href="https://www.linkedin.com/in/rishigurjar/">https://www.linkedin.com/in/rishigurjar/</a></h2>
+<h2>Github: <a href="https://github.com/rishi-gurjar">https://github.com/rishi-gurjar</a></h2>
+
 <div>
-  <br>
   <br>
   <br>
 
   <img src="images/DALL·E 2023-02-21 11.47.22 - a tile mosaic depiction of the switzerland alps and ocean.png" max-width = "100%" width="830" height = "auto">
 
-<p>Researching anthropogenic disturbance and building other things. I also take <a href="shots.html">photos</a></a>.
+<p>Researching anthropogenic disturbance and building things. I also take <a href="shots.html">photos</a></a>.
 <p>Here are extra <a href="https://unsplash.com/@rishigurjar">shots</a>.</p>
