--- a/shots.html
+++ b/shots.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shots</title>
     <link rel="icon" type="image/png" href="picsfolder/favicon.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
     @font-face {
     font-family: ScoutB;
