--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <link rel="stylesheet" href="text.css">
     <style>
     </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" href="style.css"> --> 
 </head>
 
@@ -15,26 +16,75 @@
 
   gtag('config', 'G-RSXKBQ1LNX');
 </script>
-
-<body>
   <!--   hi    -->
-      </svg>
+<body>
+  <style>
+                @media (max-width: 768px) {
+              h1 {
+                font-size: 15vw;
+              }
 
+              h2 {
+                font-size: 7vw;
+              }
+
+              h3 {
+                font-size: 7vw;
+                word-wrap: normal;
+              }
+              a {
+                font-size: 7vw;
+                color: rgb(60, 161, 55);
+              }
+              .image {
+                display: none;
+              }
+
+              body {
+                padding-left: 20px;
+                padding-right: 0px;
+                padding-top: 20px;  
+              }
+              .socials {
+                display: none;
+              }
+            }   
+            
+            @media (min-width: 768px) {
+              .socialssmall {
+                display: none;
+              }
+            }
+  </style>
     <h1>Rishi Gurjar</h1> 
     <br>
     <br>
     <br>
-<h2> SF Bay Area & Ithaca, NY</h2>
-<h2>Email: x@y | x = rrg85, y = cornell.edu</h2>
-<br>
-<h2>Linkedin: <a href="https://www.linkedin.com/in/rishigurjar/">https://www.linkedin.com/in/rishigurjar/</a></h2>
-<h2>Github: <a href="https://github.com/rishi-gurjar">https://github.com/rishi-gurjar</a></h2>
+    <h3>SF Bay Area & Ithaca, NY</h3>
+    <h3>Email: x@y | x = rrg85, y = cornell.edu</h3>
+    <br>
 
-<div>
+    <div class = "socials">
+
+
+    <h2>Linkedin: <a href="https://www.linkedin.com/in/rishigurjar/">https://www.linkedin.com/in/rishigurjar/</a></h2>
+    <h2>Github: <a href="https://github.com/rishi-gurjar">https://github.com/rishi-gurjar</a></h2>
+    </div>
+    <div class = "socialssmall">
+
+
+      <h2><a href="https://www.linkedin.com/in/rishigurjar/">Linkedin</a></h2>
+      <h2><a href="https://github.com/rishi-gurjar">Github</a></h2>
+      </div>
+
+<div class="image">
   <br>
   <br>
 
   <img src="images/DALL·E 2023-02-21 11.47.22 - a tile mosaic depiction of the switzerland alps and ocean.png" max-width = "100%" width="830" height = "auto">
-
-<p>Researching anthropogenic disturbance and building things. I also take <a href="shots.html">photos</a></a>.
-<p>Here are extra <a href="https://unsplash.com/@rishigurjar">shots</a>.</p>
+  <br>
+</div>
+<br>
+<h2>Researching anthropogenic disturbance and building things. I also take <a href="shots.html">photos</a>.</h2>
+<br>
+<h2>Here are extra <a href="https://unsplash.com/@rishigurjar">shots</a>.</h2>
