--- a/index.html
+++ b/index.html
@@ -67,14 +67,17 @@
     <div class = "socials">
 
 
-    <h2>Linkedin: <a href="https://www.linkedin.com/in/rishigurjar/">https://www.linkedin.com/in/rishigurjar/</a></h2>
+    <h2>Linkedin: <a href="https://www.linkedin.com/in/rishigurjar/">https://www.linkedin.com/in/rishigurjar</a></h2>
     <h2>Github: <a href="https://github.com/rishi-gurjar">https://github.com/rishi-gurjar</a></h2>
+    <h2>Unsplash: <a href="https://unsplash.com/@rishigurjar">https://unsplash.com/@rishigurjar</a></h2>
+
     </div>
     <div class = "socialssmall">
 
 
       <h2><a href="https://www.linkedin.com/in/rishigurjar/">Linkedin</a></h2>
       <h2><a href="https://github.com/rishi-gurjar">Github</a></h2>
+      <h2><a href="https://unsplash.com/@rishigurjar">Unsplash</a></h2>
       </div>
 
 <div class="image">
@@ -85,6 +88,5 @@
   <br>
 </div>
 <br>
-<h2>Researching anthropogenic disturbance and building things. I also take <a href="shots.html">photos</a>.</h2>
+<h2>Researching anthropogenic disturbance and building things. </h2>
 <br>
-<h2>Here are extra <a href="https://unsplash.com/@rishigurjar">shots</a>.</h2>
