--- a/index.html
+++ b/index.html
@@ -22,15 +22,18 @@
                 @media (max-width: 768px) {
               h1 {
                 font-size: 15vw;
+                font-family: Helvetica;
               }
 
               h2 {
-                font-size: 7vw;
+                font-size: 5vw;
+                font-family: Helvetica
               }
 
               h3 {
-                font-size: 7vw;
+                font-size: 5vw;
                 word-wrap: normal;
+                font-family: Helvetica
               }
               a {
                 font-size: 7vw;
@@ -55,6 +58,7 @@
                 display: none;
               }
             }
+
   </style>
     <h1>Rishi Gurjar</h1> 
     <br>
@@ -66,9 +70,11 @@
 
     <div class = "socials">
 
-
+<br>
     <h2>Linkedin: <a href="https://www.linkedin.com/in/rishigurjar/">https://www.linkedin.com/in/rishigurjar</a></h2>
+    <br>
     <h2>Github: <a href="https://github.com/rishi-gurjar">https://github.com/rishi-gurjar</a></h2>
+    <br>
     <h2>Unsplash: <a href="https://unsplash.com/@rishigurjar">https://unsplash.com/@rishigurjar</a></h2>
 
     </div>
