--- a/index.html
+++ b/index.html
@@ -22,21 +22,22 @@
                 @media (max-width: 768px) {
               h1 {
                 font-size: 15vw;
-                font-family: Helvetica;
+                font-family: Arial, Helvetica, sans-serif;
               }
 
               h2 {
                 font-size: 5vw;
-                font-family: Helvetica
+                font-family: Arial, Helvetica, sans-serif;
               }
 
               h3 {
                 font-size: 5vw;
                 word-wrap: normal;
-                font-family: Helvetica
+                font-family: Arial, Helvetica, sans-serif;
               }
               a {
                 font-size: 7vw;
+                font-family: Arial, Helvetica, sans-serif;
                 color: rgb(60, 161, 55);
               }
               .image {
@@ -72,9 +73,7 @@
 
 <br>
     <h2>Linkedin: <a href="https://www.linkedin.com/in/rishigurjar/">https://www.linkedin.com/in/rishigurjar</a></h2>
-    <br>
     <h2>Github: <a href="https://github.com/rishi-gurjar">https://github.com/rishi-gurjar</a></h2>
-    <br>
     <h2>Unsplash: <a href="https://unsplash.com/@rishigurjar">https://unsplash.com/@rishigurjar</a></h2>
 
     </div>
